--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- I understand that css is better for formatting the style of text, however since this is an HTML activity, the majority of the styling is done with deprecated HTML elements -->
     
 <body bgcolor="black" text="white" link="silver" vlink="grey">
-    <h1><center><font face="futura">THAT KIDMADRID<br>Graphic Design</font></center></h1>
+    <h1><font face="futura">THAT KIDMADRID<br>Graphic Design</font></h1>
     <img src="images/MADRID_C_1.jpg" alt="self photo">
     <font size="2" face="symbol">
     <p>My name is Carl Christian Madrid, but I prefer to be called <em>Christian</em>. I have a background in <em>Engineering Physics</em> from <em>Carleton University</em>.I always had a partiality to the arts, but until recently, I had been skeptical of its validity as a stable career. Learning more about the harmony between design and tech is one of the factors that hooked me on design.</p>
@@ -16,7 +16,7 @@
     <p>The nerdiest thing I do that pertains to art and design is being a part of the designer vinyl toy phenomenon —I am a <em>Kidrobot</em> fanboy—, and more recently with the purchase of a dslr, being a shutterbug. Both hobbies are expensive, and as a student throwing away 3 years of one of the most expensive Engineering programs that Carleton offers, I'm pushed to be successful in this new career so that I can continue my designer addictions.</p>
     </font>
     <hr>
-    <h2><center><font face="futura">Social Media Links</font></center></h2>
+    <h2><font face="futura">Social Media Links</font></h2>
     <ul><font face="symbol">
         <li><a href="http://www.github.com/ccmadrid" target="_blank"><img src="images/github.png">Github</a></li>
         <li><a href="http://www.twitter.com/xtiyan" target="_blank"><img src="images/twitter.png">Twitter</a></li>
