modified horizontal rules
played around with widths and colours

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <p>So far, my experience in the design school has been enjoyable and educating. It is a great asset to be able to use and learn professional techniques and software instead of teaching myself through trial, error, and <em>Google</em>.</p>
     <p>The nerdiest thing I do that pertains to art and design is being a part of the designer vinyl toy phenomenon —I am a <em>Kidrobot</em> fanboy—, and more recently with the purchase of a dslr, being a shutterbug. Both hobbies are expensive, and as a student throwing away 3 years of one of the most expensive Engineering programs that Carleton offers, I'm pushed to be successful in this new career so that I can continue my designer addictions.</p>
     </font>
-    <hr>
+    <hr color="silver" width="80%" size="1">
+    <hr color="silver">
+    <hr color="silver" width="80%" size="1">
     <h2><font face="futura">Social Media Links</font></h2>
     <ul><font face="symbol">
         <li><a href="http://www.github.com/ccmadrid" target="_blank"><img src="images/github.png">Github</a></li>
@@ -26,7 +28,9 @@
         </font>
     </ul>
     <img src="images/kidmadrid.jpg" alt="Kidmadrid Logo">
-    <hr>
+    <hr color="silver" width="80%" size="1">
+    <hr color="silver">
+    <hr color="silver" width="80%" size="1">
     <p><font size="1">Source: <a href="http://thatkidmadrid.tumblr.com/" target="_blank"> thatkidmadrid.tumblr.com</a></font></p>
 </body>
 </html>
