--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>THAT KIDMADRID</title> 
+    <title>THAT KIDMADRID</title>
+    <link rel="icon" href="images/icon.png">
 </head>   
     
 <!-- I understand that css is better for formatting the style of text, however since this is an HTML activity, the majority of the styling is done with deprecated HTML elements -->
